objects/PPT_Translation__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Field name</description>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Original_Value__c</fullName>
        <description>Field Original Value</description>
        <label>Field Original Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Translated_Value__c</fullName>
        <description>Field Translated Value</description>
        <label>Field Translated Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <description>Field Type</description>
        <label>Field Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <description>Language Code</description>
        <label>Language Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>PPT Translation</label>
    <listViews>
        <fullName>ALL_Fields</fullName>
        <columns>NAME</columns>
        <columns>Field_Name__c</columns>
        <columns>Field_Original_Value__c</columns>
        <columns>Field_Translated_Value__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Language_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPT Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>